update mon hoc"

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # Server url
 # Local server configuration at: https://docs.minimals.cc/mock-server/
-VITE_SERVER_URL=http://localhost:5000
+# VITE_SERVER_URL=http://localhost:5000
 # VITE_SERVER_URL=https://api-dev-minimal-v700.pages.dev
 # VITE_SERVER_URL=https://g7nlqg67-3000.asse.devtunnels.ms
-# VITE_SERVER_URL=http://192.168.1.14:5000
+VITE_SERVER_URL=http://192.168.1.14:5000
 
 # Public resource directory
 VITE_ASSETS_DIR=
